Added support for optional Preshared Key in client management
